<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/background"
    android:orientation="vertical"

    android:gravity="center"
    android:padding="30dip"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   <TextView
      android:text="@string/main_title"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="25dip"
      android:textSize="24.5sp" />
   <Button
      android:id="@+id/continue_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/continue_label" />
   <Button
      android:id="@+id/new_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/new_game_label" />
   <Button
      android:id="@+id/about_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_label" />
   <Button
      android:id="@+id/exit_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/exit_label" />
</LinearLayout>
